fixed styling on mobile; using DeleteModal component

--- a/src/components/WarehouseItem/WarehouseItem.scss
+++ b/src/components/WarehouseItem/WarehouseItem.scss
@@ -7,6 +7,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   padding: 1.5rem;
+  column-gap: 1rem;
 
   @include tablet {
     grid-template-rows: 1fr;
@@ -14,6 +15,7 @@
     align-items: center;
     grid-column: 1 / 6;
     padding: 1.2rem;
+    column-gap: inherit;
   }
 
   &__warehouse-name {
@@ -24,31 +26,41 @@
   }
 
   &__info {
+    @include text-bodyMedium;
     &--warehouse {
+      order: 1;
       @include tablet {
+        order: unset;
         grid-column: 1;
       }
     }
 
     &--address {
+      order: 3;
       @include tablet {
+        order: unset;
         grid-column: 2;
       }
     }
 
     &--contact {
+      order: 2;
       @include tablet {
+        order: unset;
         grid-column: 3;
       }
     }
 
     &--contact-info {
+      order: 4;
       @include tablet {
+        order: unset;
         grid-column: 4;
       }
     }
 
     &--actions {
+      order: 5;
       grid-column: 1 / 3;
       display: flex;
       align-items: center;
@@ -56,6 +68,7 @@
       h4 {
         display: none;
         @include tablet {
+          order: unset;
           text-align: center;
         }
       }
